k8s/hello/deploymenthello.yml
apiVersion: apps/v1
kind: Deployment
metadata:
# commentaire
  name: hello-deployment
  labels:
    app: hello
spec:
  replicas: 3
  selector:
    matchLabels:
      app: hello-pod
  template:
    metadata:
      labels:
        app: hello-pod
    spec:
      containers:
      - image: bart120/hellopink:st1
        name: hello-cont
        ports:
        - containerPort: 80
