k8s/hello/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: localhost
    http:
      paths:
      - path: /pink
        pathType: Prefix
        backend:
          service: 
            name: pink-service
            port:
              number: 80
      - path: /green
        pathType: Prefix
        backend:
          service: 
            name: green-service
            port:
              number: 80
